# hasami

./: .depup  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE-2.0  Makefile  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: dict-build.yml  release.yml
dict/: ipadic-neologd-sudachi-v2.hsd  ipadic-neologd-sudachi.hsd  ipadic-neologd.hsd  ipadic.hsd  sudachi.hsd
dict/user/: priority-reading-fixes.csv  training-vocab.csv  tts-fixes.csv  vocab-from-training.csv
eval/: benchmark.py  compare.py  main.py  pyproject.toml
hasami-python/: Cargo.toml  pyproject.toml
hasami-python/src/: lib.rs
scripts/: convert-unidic-csv.py  convert_sudachi_to_mecab.py  remap_sudachi_to_ipadic.py
src/: analyzer.rs  char_class.rs  dict.rs  ffi.rs  lattice.rs  lib.rs  main.rs  mmap_dict.rs  trie.rs
tests/: integration.rs
