[workspace]
members = [".", "hasami-python"]
resolver = "2"

[package]
name = "hasami"
version = "0.1.0"
edition = "2024"
description = "High-performance Japanese morphological analyzer"
license = "MIT"
rust-version = "1.85"

[lib]
name = "hasami"
path = "src/lib.rs"

[[bin]]
name = "hasami"
path = "src/main.rs"

[dependencies]
csv = "1.4.0"
clap = { version = "4.6.1", features = ["derive"] }
encoding_rs = "0.8.35"
glob = "0.3.3"
serde_json = "1.0.149"
memmap2 = "0.9.10"
bytemuck = { version = "1.25.0", features = ["derive"] }
indicatif = "0.18.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
